# CBL-Autonomous-Twinning-Systems-option-B

./: .dockerignore  .gitignore  CHANGES-windows-wslg.md  DEMO_RUNBOOK.md  DEMO_SCRIPT.md  Dockerfile  README.md  WEB_DEMO_STEPS.md  demo_evidence.sh  docker-compose.override.yml  docker-compose.yml
docker/: ros-env  start-vnc
my_tb3_world/: package.xml  (+2 more)
tb3_pesticide_dt/: .gitignore  README.md  package.xml  setup.cfg  setup.py
tb3_pesticide_dt/config/: nav2_burger_option_b.yaml  nav2_odom_return.yaml  nav2_plant_zones.yaml  plant_zones.yaml  real_robot_lab.yaml  sim_only.yaml
tb3_pesticide_dt/docs/: demo_evidence_checklist.md
tb3_pesticide_dt/launch/: gazebo_pose_mirror.launch.py  mission_only.launch.py  nav2_no_rviz.launch.py  option_b_full_demo.launch.py  option_b_navigation2.launch.py  option_b_two_arenas_world.launch.py  option_b_visual_twin.launch.py  pesticide_dt.launch.py  pesticide_nav2_dt.launch.py  pesticide_world.launch.py  pesticide_world_visual_twin.launch.py  twin_safety.launch.py
tb3_pesticide_dt/maps/: gazebo_slam_map.pgm  gazebo_slam_map.yaml
tb3_pesticide_dt/models/visual_twin_burger/: model.sdf
tb3_pesticide_dt/tb3_pesticide_dt/: __init__.py  arena_map_node.py  demo_evidence_node.py  evidence_recorder_node.py  gazebo_pose_mirror_node.py  inspection_twin_node.py  nav2_initial_pose_node.py  option_b_dashboard_node.py  option_b_dashboard_viewer.py  option_b_dashboard_web.py  option_b_environment_node.py  pesticide_logic.py  plant_mission_node.py  plant_nav2_mission_node.py  twin_safety_node.py
tb3_pesticide_dt/test/: test_pesticide_logic.py
(+4 files in other folders)
